# whatdbg

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NEXT-SPRINT.md  PLAN.md  SPEC.md  build.bat  build_debug.bat  build_phase2c.bat  build_whatdbg.bat  do_build.bat  run_build.ps1
.claude/: settings.json
.claude/agents/: auditor.md  counselor.md  engineer.md  librarian.md  machinist.md  oracle.md  pathfinder.md  researcher.md  surgeon.md
.claude/commands/: counselor.md  go.md  handoff.md  hey.md  log.md  surgeon.md
.opencode/: opencode.json
.opencode/agents/: counselor.md  engineer.md  machinist.md  researcher.md
.opencode/commands/: counselor.md  surgeon.md
carol/: ARCHITECT.md  ARCHITECTURE-WRITER.md  CAROL.md  CLAUDE.md  JRENG-CODING-STANDARD.md  PATTERNS-WRITER.md  PATTERNS.md  SCRIPTS.md  SPRINT-LOG.md  config.yml
carol/carol/: ARCHITECTURAL-MANIFESTO.md  CAROL.md  NAMING-CONVENTION.md  PATTERNS-WRITER.md  PATTERNS.md  SPEC-WRITER.md  SPRINT-LOG.md  config.yml
carol/carol/carol/: ARCHITECTURE-WRITER.md  ARCHITECTURE.md
carol/carol/templates/: config.yml
carol/roles/: auditor.md  librarian.md  oracle.md  pathfinder.md  surgeon.md  validator.md
carol/scripts/: generate-error-handler.sh  generate-validation.sh  rename-symbol.sh  restore-backup.sh  safe-edit.sh  safe-insert.sh  switch-subagent-model.sh  validate-code.sh
carol/templates/: SPRINT-LOG.md
src/: BreakpointManager.cpp  BreakpointManager.hpp  CommandQueue.hpp  DapDispatcher.cpp  DapDispatcher.hpp  DapProtocol.cpp  DapProtocol.hpp  DapTypes.hpp  DbgEngCallbacks.cpp  DbgEngCallbacks.hpp  DbgEngSession.cpp  DbgEngSession.hpp  bp_diagnose.cpp  bp_test_target.cpp  main.cpp  smoke_test.cpp
test/: build_log.txt  build_log2.txt  build_test.bat  dap_smoke.sh  hello.cpp  hello.ilk  run_build.bat  run_build2.bat
